--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.0",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.1.0",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
     "sass": "^1.83.1"
   },
   "devDependencies": {
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
