--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.0",
+    "antd-img-crop": "^4.24.0",
+    "cos-nodejs-sdk-v5": "^2.14.6",
     "jsonwebtoken": "^9.0.2",
     "markdown-it": "^14.1.0",
     "moment": "^2.30.1",
