--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "antd-img-crop": "^4.24.0",
     "cos-nodejs-sdk-v5": "^2.14.6",
     "jsonwebtoken": "^9.0.2",
-    "markdown-it": "^14.1.0",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.3",
     "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
     "sass": "^1.83.1"
