--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.23.0",
     "antd-img-crop": "^4.24.0",
     "cos-nodejs-sdk-v5": "^2.14.6",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
@@ -22,6 +23,7 @@
     "react-markdown": "^9.0.3",
     "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
+    "rehype-highlight": "^7.0.2",
     "sass": "^1.83.1"
   },
   "devDependencies": {
