--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cos-nodejs-sdk-v5": "^2.14.6",
     "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "katex": "^0.16.21",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
@@ -24,6 +25,8 @@
     "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sass": "^1.83.1"
   },
   "devDependencies": {
