--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "sass": "^1.83.1"
   },
