--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd-img-crop": "^4.24.0",
     "cos-nodejs-sdk-v5": "^2.14.6",
     "highlight.js": "^11.11.1",
+    "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.21",
     "moment": "^2.30.1",
