--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.12.0",
     "next": "15.1.4",
     "nodemailer": "^6.10.0",
+    "openai": "^4.86.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.3",
