--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-markdown": "^9.0.3",
     "react-markdown-editor-lite": "^1.3.4",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.1",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
